# src/internal/docs/swagger.json
@@ -17,11 +17,16 @@
         },
         "version": "2.0"
     },
-    "host": "localhost:4000",
+    "host": "localhost:3000",
     "basePath": "/",
     "paths": {
         "/users/": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Create User",
                 "consumes": [
                     "application/json"
@@ -74,6 +79,11 @@
         },
         "/users/list": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "List all users of a specified set",
                 "consumes": [
                     "application/json"
@@ -97,6 +107,13 @@
                         "description": "Search parameter for user",
                         "name": "search",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authentication ID",
+                        "name": "Authid",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -138,6 +155,11 @@
         },
         "/users/me": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Get current user",
                 "consumes": [
                     "application/json"
@@ -185,6 +207,11 @@
         },
         "/users/{id}": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Get user by ID",
                 "consumes": [
                     "application/json"
@@ -202,6 +229,13 @@
                         "description": "User ID",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authentication ID",
+                        "name": "Authid",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -248,6 +282,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Delete given user",
                 "consumes": [
                     "application/json"
@@ -265,6 +304,13 @@
                         "description": "User ID",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authentication ID",
+                        "name": "Authid",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -302,6 +348,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Update given user",
                 "consumes": [
                     "application/json"
@@ -397,6 +448,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "Bearer": {
+            "description": "\u003e- Enter the token with the `Bearer: ` prefix, e.g. \"Bearer eyJhbGciOiJIUzI1NiJ9.e30.DXCaKJxPJq8JhXOZIN4yWdBwJ4sraVbwH9imDCHZPaA\".",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
